# strand

./: .gitignore  index.html  package-lock.json  package.json  svelte.config.js
src/: App.svelte  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Editor.svelte
src/lib/: Edge.svelte  Home.svelte  Node.svelte
src/libs/: Editor.svelte  graphdb.js  queries.js  store.js
src/routes/: +layout.svelte  +page.svelte  Edge.svelte  Edges.svelte  Graph.svelte  Home.svelte  Import.svelte  Node.svelte
src/routes/projects/: +page.svelte
src/routes/todo/: +page.svelte
src/routes/waiting/: +page.svelte
src/stores/: store.js
